rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h235_2003-amd1_H235-SECURITY-MESSAGES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h235_2003-amd1_H235-SECURITY-MESSAGES.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 252, column 2]
     │
     │ 
 252 │  CryptoToken ::= CHOICE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 253 │    cryptoEncryptedToken
 254 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 255 │                                                                 OBJECT
 256 │                                                                   IDENTIFIER,
 257 │                                                               token
 258 │                                                                 ENCRYPTED
 259 │                                                                   {EncodedGeneralToken}
 260 │    },
 261 │    cryptoSignedToken
 262 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 263 │                                                                 OBJECT
 264 │                                                                   IDENTIFIER,
 265 │                                                               token
 266 │                                                                 SIGNED
 267 │                                                                   {EncodedGeneralToken}
 268 │    },
 269 │    cryptoHashedToken
 270 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 271 │                                                                 OBJECT
 272 │                                                                   IDENTIFIER,
 273 │                                                               hashedVals
 274 │                                                                 ClearToken,
 275 │                                                               token
 276 │                                                                 HASHED
 277 │                                                                   {EncodedGeneralToken}
 278 │    },
 279 │    cryptoPwdEncr         ENCRYPTED{EncodedPwdCertToken},
 280 │    ...
 281 │  }
 283 │  -- These allow the passing of session keys within the H.245 OLC structure.
 284 │  -- They are encoded as standalone ASN.1 and based as an OCTET STRING within
 285 │  -- H.245
     │
─────╯
